<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="viewModel"
            type="com.himes.romannumerals.entryscreen.EntryScreenViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        >

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="xvimm"
            android:textSize="@dimen/current_roman_numeral_text_size"
            android:text="@{viewModel.romanNumeral.numeral}"
            app:layout_constraintBottom_toTopOf="@id/button_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_top"
            app:layout_constraintGuide_percent=".6"
            android:orientation="horizontal"
            />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_mid"
            app:layout_constraintGuide_percent=".8"
            android:orientation="horizontal"
            />


        <Button
            android:id="@+id/add_i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button_mid"
            app:layout_constraintTop_toTopOf="@id/button_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/add_v"
            android:text="@string/one"
            />

        <Button
            android:id="@+id/add_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button_mid"
            app:layout_constraintTop_toTopOf="@id/button_top"
            app:layout_constraintLeft_toRightOf="@id/add_i"
            app:layout_constraintRight_toLeftOf="@id/add_x"
            android:text="@string/five"
            />

        <Button
            android:id="@+id/add_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button_mid"
            app:layout_constraintTop_toTopOf="@id/button_top"
            app:layout_constraintLeft_toRightOf="@id/add_v"
            app:layout_constraintRight_toLeftOf="@id/add_l"
            android:text="@string/ten"
            />

        <Button
            android:id="@+id/add_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button_mid"
            app:layout_constraintTop_toTopOf="@id/button_top"
            app:layout_constraintLeft_toRightOf="@id/add_x"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/fifty"
            />

        <Button
            android:id="@+id/add_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_mid"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/add_d"
            android:text="@string/one_hundred"
            />

        <Button
            android:id="@+id/add_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_mid"
            app:layout_constraintLeft_toRightOf="@id/add_c"
            app:layout_constraintRight_toLeftOf="@id/add_m"
            android:text="@string/five_hundred"
            />

        <Button
            android:id="@+id/add_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_mid"
            app:layout_constraintLeft_toRightOf="@id/add_d"
            app:layout_constraintRight_toLeftOf="@id/back"
            android:text="@string/thousand"
            />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_mid"
            app:layout_constraintLeft_toRightOf="@id/add_m"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/delete"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
